Avoid allocation of new objects.